--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "chatpay",
   "version": "0.0.0",
   "dependencies": {
+    "ace": "~1.2.0",
     "angular": "^1.3.0",
     "angular-animate": "^1.3.0",
     "angular-bootstrap": "~0.13.3",
@@ -15,6 +16,7 @@
     "angular-scroll-glue": "~2.0.5",
     "angular-socket-io": "^0.7.0",
     "angular-touch": "^1.3.0",
+    "bootbox.js": "bootbox#~4.4.0",
     "bootstrap": "^3.2.0",
     "underscore": "~1.8.3"
   },
