--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "angular-touch": "^1.3.0",
     "bootbox.js": "bootbox#~4.4.0",
     "bootstrap": "^3.2.0",
+    "ng-flow": "~2",
     "underscore": "~1.8.3"
   },
   "devDependencies": {
